2011-12-30  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a placeholder rivet-which script (not currently
	installed).

	* Tweaking to avoid a very time-consuming debug printout in
	compare-histos with the -v flag, and modifying the Rivet env vars
	in rivet-mkhtml before calling compare-histos to eliminate
	problems induced by relative paths (i.e. "." does not mean the
	same thing when the directory is changed within the script).

2011-12-12  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a command line completion function for rivet-mkhtml.

2011-12-12  Frank Siegert  <frank.siegert@cern.ch>

	* Fix for factor of 2.0 in normalisation of CMS_2011_S9086218

	* Add --ignore-missing option to rivet-mkhtml to ignore non-existing
	AIDA files.

2011-12-06  Andy Buckley  <andy.buckley@cern.ch>

	* Include underflow and overflow bins in the normalisation when
	calling Analysis::normalise(h)

2011-11-23  Andy Buckley  <andy.buckley@cern.ch>

	* Bumping version to 1.8.0alpha0 since the Jet interface changes
	are quite a major break with backward compatibility (although the
	vast majority of analyses should be unaffected).

	* Removing crufty legacy stuff from the Jet class -- there is
	never any ambiguity between whether Particle or FourMomentum
	objects are the constituents now, and the jet 4-momentum is set
	explicitly by the jet alg so that e.g. there is no mismatch if the
	FastJet pt recombination scheme is used.

	* Adding default do-nothing implementations of Analysis::init()
	and Analysis::finalize(), since it is possible for analysis
	implementations to not need to do anything in these methods, and
	forcing analysis authors to write do-nothing boilerplate code is
	not "the Rivet way"!

2011-11-19  Andy Buckley  <andy.buckley@cern.ch>

	* Adding variant constructors to FastJets with a more natural
	Plugin* argument, and decrufting the constructor implementations a
	bit.

	* bin/rivet: Adding a more helpful error message if the rivet