@@ -8,7 +8,7 @@
 #include "boost/foreach.hpp"
 #define foreach BOOST_FOREACH
 
-#include <boost/random.hpp>
+//#include <boost/random.hpp>
 #include <boost/algorithm/string.hpp>
 
 namespace Rivet {
@@ -28,11 +28,11 @@ namespace Rivet {
   using namespace boost;
 
   // Random numbers
-  typedef boost::minstd_rand RngBase;
-  typedef boost::uniform_real<> UniformRealDist;
-  typedef boost::variate_generator<RngBase&, UniformRealDist> UniformRealRNG;
-  typedef boost::uniform_int<> UniformIntDist;
-  typedef boost::variate_generator<RngBase&, UniformIntDist> UniformIntRNG;
+  // typedef boost::minstd_rand RngBase;
+  // typedef boost::uniform_real<> UniformRealDist;
+  // typedef boost::variate_generator<RngBase&, UniformRealDist> UniformRealRNG;
+  // typedef boost::uniform_int<> UniformIntDist;
+  // typedef boost::variate_generator<RngBase&, UniformIntDist> UniformIntRNG;
 
 
 }
